Moved to Sqlite

--- a/components/login.templ
+++ b/components/login.templ
@@ -34,6 +34,11 @@ templ LoginPage() {
                     Login
                 </button>
             </form>
+            <div class="mt-4 text-center">
+                <p class="text-sm text-gray-600">
+                    Don't have an account? <a href="/register" class="text-indigo-600 hover:underline">Register here</a>
+                </p>
+            </div>
         </div>
     </body>
 </html>
