--- a/components/register.templ
+++ b/components/register.templ
@@ -46,6 +46,11 @@ templ RegisterPage() {
                     Register
                 </button>
             </form>
+            <div class="mt-4 text-center">
+                <p class="text-sm text-gray-600">
+                    Already have an account? <a href="/login" class="text-indigo-600 hover:underline">Login here</a>
+                </p>
+            </div>
         </div>
     </body>
 </html>
