--- a/components/head.templ
+++ b/components/head.templ
@@ -13,6 +13,8 @@ templ Head(title string) {
         <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/json-enc.js"></script>
         <!-- JsZip -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+        <!-- Masonry.js -->
+        <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
         <!-- META -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
